@@ -2,6 +2,11 @@ CHANGELOG
 =========
 
 
+2021-07-16
+----------
+### Specfile
+* Rewrite version detection to regex instead of rpmspec.
+
 2021-07-04
 ----------
 ### Changelog extractor
@@ -14,7 +19,7 @@ CHANGELOG
 * Rewrite config file parser to single file.
 * New file `helpers` in common directory to detect the software name.
 
-### Specfile Versio Updater
+### Specfile Version Updater
 * New script to update the version in the spec file, remove the old tarball and add the new one.
 
 ### Libraries.io latest version
